[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leadtimeutils"
version = "0.1.0"
description = "A utility module for lead time analysis"
readme = "README.md"
authors = [
  { name = "User", email = "user@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/library/leadtimeutils"
"Bug Tracker" = "https://github.com/library/leadtimeutils/issues"
