[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leadtimeutils"
version = "0.1.1"
description = "a utility module for lead time analysis in procurement & logistic division mineral alam abadi"
readme = "README.md"
authors = [
  { name = "nagabonar27", email = "faajaramry@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/data-system-proclog-maa/leadtime-utils"
"Bug Tracker" = "https://github.com/data-system-proclog-maa/leadtime-utils/issues"
